Fixed buttons jumping to newline in topnav

--- a/css/style.css
+++ b/css/style.css
@@ -24,27 +24,47 @@ body {
     font-family: PoppinsLight;
 }
 
+/*
+*
+*
+*/
+
+/* Utility */
+.fullheight {
+    height: 100%;
+}
+
+.fullwidth {
+    width: 100%;
+}
+
+.center {
+    float: none;
+    margin: auto;
+}
+
+.nopadding {
+    padding: 0;
+}
+
+/* HEADER */
 .header {
     height: 6vh;
     background-color: #8B0000;
     color: white;
 }
 
-/* Scaling of the top navbar buttons */
 .top-nav {
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .title {
     margin-bottom: 0;
 }
 
+/* Content */
 .agenda {
     min-height: 84vh;
-}
-
-.fullheight {
-    height: 100%;
 }
 
 .legend {
@@ -63,9 +83,7 @@ body {
     padding-right: 10px;
 }
 
-
-
-.legend:first-child {
+.legend > div:first-child {
     margin-top: 10vh;
 }
 
@@ -87,10 +105,6 @@ body {
     background:#dadec0;   
 }
 
-.nopadding {
-    padding: 0;
-}
-
 .legend .timediv p {
     display: inline-block;
 }
@@ -105,7 +119,7 @@ body {
     border-right: #dadec0 1px solid;
 }
 
-
+/* Bottom nav */
 .nav {
     height: 10vh;
     /* background-color: #1d1e22; */
